[package]
name = "servecli"
description = "TiefBlog runner cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
log = "0.4"
colog = "1.3"
env_logger = "0.11"
hyper = { version = "1.7", features = ["full"] }
tokio = { version = "1.47", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tiefblog-lib = { path = "../lib" }

[dev-dependencies]
rstest = "0.26.1"
